// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`graph.utils should make correct graph from tasks 1`] = `
Map {
  "0" => Set {
    "1",
    "3",
  },
  "1" => Set {
    "2",
  },
  "2" => Set {
    "3",
  },
  "3" => Set {},
}
`;

exports[`graph.utils should make correct reverse graph 1`] = `
Map {
  "0" => Set {},
  "1" => Set {
    "0",
  },
  "3" => Set {
    "0",
    "2",
  },
  "2" => Set {
    "1",
  },
}
`;
